# nginx-test

./: LICENSE  README.md  docker-compose.yml  flask.dockerfile  pyproject.toml
app1/: hello.py
app2/: hello.py
home/: hello.py
nginx/: nginx.conf
